--- a/api-server/package.json
+++ b/api-server/package.json
@@ -15,8 +15,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
-    "mongoose": "^6.0.3",
-    "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^6.0.3"
   }
 }
