--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@fortawesome/react-fontawesome": "^0.2.0",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/user-event": "^13.5.0",
         "bootstrap": "^5.3.2",
