--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,15 +10,15 @@ services:
             - mongodb_data:/data/db
         networks:
             - mongodb_network
-    # api-server:
-    #   build:
-    #     context: api-server
-    #     dockerfile: Dockerfile
-    #   ports:
-    #     - "3000:3000"
-    #   environment:
-    #     NODE_ENV: development
-    #     LOCALHOST: host.docker.internal
+    api-server:
+        build:
+            context: api-server
+            dockerfile: Dockerfile
+        ports:
+            - "3000:3000"
+        environment:
+            NODE_ENV: development
+            LOCALHOST: host.docker.internal
 
 volumes:
     mongodb_data:
